# WorkoutRoutineGenerator

./: #To create a program, fill what exercise.py  .gitignore  CreateExerciseRow.py  CreateWorkout.py  DayClass.py  Days.csv  Days.yml  Difficulty.py  ExerciseClass.py  ExerciseListDividerFunctions.py  Exercises.csv  Exercises.yml  GenerateOutputPdf.bat  GenerateProgram.bat  LICENSE  MaxWeights.JSON  NativeXlsx.py  Output.html  Output_table_headers.py  PrilepinChart.csv  PrilepinChart.json  PrilepinChartWithPolinoms.xlsx  ProgramConfig.yml  ProgramDataStructure.py  ProgramGenerator.py  ProgressionClass.py  Progressions.csv  README.md  USER_MANUAL.md  WeekClass.py  WeekConfig.yaml  Worklog_Readback_Analysis.py  requirements.txt  setup.py  warmup.py
API/: Days.yml  WorkoutRoutineAPI.py  main.py  test.py
ReactApp/: package-lock.json
ReactApp/workoutroutinegeneratorapp/: package-lock.json  package.json
ReactApp/workoutroutinegeneratorapp/src/: App.css  App.js
workoutroutinegenerator/: DayClass.py  ProgramConfig.yml  ProgramGenerator.py  ProgramSettingWeekClass.py  Warmup.py  WeekClass.py  __init__.py  pyproject.toml  warmup.py
workoutroutinegenerator/exerciseclass/: ExerciseClass.py
workoutroutinegenerator/exerciseclass/difficulty/: Difficulty.py
workoutroutinegenerator/exerciseclass/difficulty/enumdefinitions/: EnumDefinitions.py
